update query course, category

--- a/src/views/staff/categories.hbs
+++ b/src/views/staff/categories.hbs
@@ -10,8 +10,7 @@
             <button type="button" class="btn btn-outline-primary fs-5 js-add-info" style="font-weight: 500;">New
                 Category</button>
             <form action="/staff/categories/search" class="content-detail-header-search" method="GET">
-                <input type="search" name="q" class="form-control" placeholder="Search by name..."
-                    aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <input type="search" name="q" class="form-control" placeholder="Search by name...">
                 <button style="width: 90px;" class="btn btn-outline-primary" type="submit"><i
                         class="bi bi-search"></i></button>
             </form>
