--- a/src/views/staff/courses.hbs
+++ b/src/views/staff/courses.hbs
@@ -10,8 +10,7 @@
             <button type="button" class="btn btn-outline-primary fs-5 js-add-info" style="font-weight: 500;">New
                 Course</button>
             <form action="/staff/courses/search" class="content-detail-header-search" method="GET">
-                <input type="search" name="qq" class="form-control" placeholder="Search by code or name..."
-                    aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <input type="search" name="qq" class="form-control" placeholder="Search by code or name...">
                 <button style="width: 90px;" class="btn btn-outline-primary" type="submit"><i
                         class="bi bi-search"></i></button>
             </form>
