DCT: commit trainer functions

--- a/src/views/trainer/assignedCourses.hbs
+++ b/src/views/trainer/assignedCourses.hbs
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> head}}
+
 <body>
     {{> trainerLayout}}
-    <main class="content-detail" id="">
-        
+    <main class="content-detail trainer-body" id="">
+
         <div class="content-detail-header mt-4">
             <form action="/admin/admin-accounts/search" class="content-detail-header-search" method="GET">
-                <input type="search" class="form-control" placeholder="Search by email or name..." aria-label="Recipient's username" aria-describedby="basic-addon2" name="q">
+                <input type="search" class="form-control" placeholder="Search by email or name..."
+                    aria-label="Recipient's username" aria-describedby="basic-addon2" name="q">
                 <button style="width: 90px;" class="btn btn-primary" type="submit">
                     <i class="bi bi-search"></i>
                 </button>
@@ -32,11 +34,13 @@
                     <th scope="row" style="text-align: center;">{{this.position}}</th>
                     <td scope="col" style="text-align: center;">{{this.class_name}}</td>
                     <td scope="col" style="text-align: center;">{{this.course_name}}</td>
-                    <td scope="col" style="text-align: center;">{{this.total_trainees}}</td>     
+                    <td scope="col" style="text-align: center;">{{this.total_trainees}}</td>
                     <td style="text-align: center;">
                         <div>
-                            <div class="btn-group" style="z-index: 0; height: 40px; width: 199px;" role="group" aria-label="Basic mixed styles example">
-                                <a href="/trainer/assignedCourse/viewclass?id={{_id}}" class="btn btn-success js-edit-info" style="border-bottom-left-radius: unset;">
+                            <div class="btn-group" style="z-index: 0; height: 40px; width: 199px;" role="group"
+                                aria-label="Basic mixed styles example">
+                                <a href="/trainer/assignedCourse/viewclass?id={{_id}}"
+                                    class="btn btn-success js-edit-info" style="border-bottom-left-radius: unset;">
                                     <i class="bi bi-pencil-square"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">View</span>
                                 </a>
@@ -50,4 +54,5 @@
     </main>
     {{> bottom}}
 </body>
+
 </html>
