--- a/src/views/partials/trainerLayout.hbs
+++ b/src/views/partials/trainerLayout.hbs
@@ -11,7 +11,7 @@
             </label> --}}
             <input type="checkbox" name="" id="info-checkbox">
             <ul>
-                {{!-- <li><a href="/{{removeSpace user.name}}">Your profile</a></li> --}}
+                <li><a href="/trainer/profile">Your profile</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
@@ -21,7 +21,7 @@
 <aside id="common_interface-l_sidebar" class="common_interface-l_sidebar">
     <a href="javascript:void(0)" class="l_sidebar-closebtn" onclick="toggle()">&times;</a>
     <div class="l_sidebar-main_menu">
-    <h2>Menu</h2>
+        <h2>Menu</h2>
         <a href="/trainer"><i class="bi bi-house-door"></i></i>Home</a>
         <a href="/trainer/assignedCourse"><i class="bi bi-briefcase"></i> View Courses</a>
         <a href="/trainer/viewGrade"><i class="bi bi-briefcase"></i>Grade</a>
@@ -29,4 +29,3 @@
         <a href="#"><i class="bi bi-box-arrow-right"></i></i>Logout</a>
     </div>
 </aside>
-
