--- a/src/views/trainer/profile.hbs
+++ b/src/views/trainer/profile.hbs
@@ -3,136 +3,146 @@
 {{> head}}
 <style>
     body {
-    background: rgb(99, 39, 120)
-}
-.margin{
-    margin-top: -24px;
-    margin-left: 80px;
-}
+        background: rgb(99, 39, 120)
+    }
 
-.changeProfile-container {
+    .margin {
+        margin-top: -24px;
+        margin-left: 80px;
+    }
+
+    .changeProfile-container {
         background-color: white;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
     }
 
-.form-control:focus {
-    box-shadow: none;
-    border-color: #BA68C8
-}
+    .form-control:focus {
+        box-shadow: none;
+        border-color: #BA68C8
+    }
 
-.profile-button {
-    background: rgb(99, 39, 120);
-    box-shadow: none;
-    border: none
-}
+    .profile-button {
+        background: rgb(99, 39, 120);
+        box-shadow: none;
+        border: none
+    }
 
-.profile-button:hover {
-    background: #682773
-}
+    .profile-button:hover {
+        background: #682773
+    }
 
-.profile-button:focus {
-    background: #682773;
-    box-shadow: none
-}
+    .profile-button:focus {
+        background: #682773;
+        box-shadow: none
+    }
 
-.profile-button:active {
-    background: #682773;
-    box-shadow: none
-}
+    .profile-button:active {
+        background: #682773;
+        box-shadow: none
+    }
 
-.back:hover {
-    color: #682773;
-    cursor: pointer
-}
+    .back:hover {
+        color: #682773;
+        cursor: pointer
+    }
 
-.labels {
-    font-size: 11px
-}
+    .labels {
+        font-size: 11px
+    }
 
-.add-experience:hover {
-    background: #BA68C8;
-    color: #fff;
-    cursor: pointer;
-    border: solid 1px #BA68C8
-}
+    .add-experience:hover {
+        background: #BA68C8;
+        color: #fff;
+        cursor: pointer;
+        border: solid 1px #BA68C8
+    }
 </style>
+
 <body>
     {{> trainerLayout}}
-    <main >
-    <div class="container rounded bg-white mt-5;" style="margin-top: 120px; width: 900px;">
-        <div>
-            <div class="text-center" style="border-bottom: 1px solid rgb(192, 192, 192);">
-                <a href="/{{user.role}}">
-                    <img src="/images/header/logo.png" alt="" width="150px">
+    <main>
+        <div class="container rounded bg-white mt-5;" style="margin-top: 120px; width: 900px;">
+            <div>
+                <div class="text-center" style="border-bottom: 1px solid rgb(192, 192, 192);">
+                    <a href="/{{user.role}}">
+                        <img src="/images/header/logo.png" alt="" width="150px">
+                    </a>
+                </div>
+                <a href="/{{user.role}}" class="btn btn-link fs-5">
+                    <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
                 </a>
-            </div>
-            <a href="/{{user.role}}" class="btn btn-link fs-5">
-            <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
-        </a>
-        <a href="/{{removeSpace user.name}}/change_password" class="btn btn-link">Change Password</a>
+                <a href="/{{ trainer.name}}/change_password" class="btn btn-link">Change Password</a>
 
-    <div class="row" style="margin-top: -25px;">
-        <div class="col-md-3" style="margin-left: 150px; margin-top: 25px">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                <img style="width: 170px; height: 170px;" src="data:image/{{trainer.image.contentType}};base64,{{convertImage trainer.image.data}}" alt="" class="img-thumbnail">
-                <span>{{removeSpace user.name}}</span><span class="text-black-50">{{trainer.email}}</span></div>
-        </div>
-        <div class="col-md-5">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center">
-                    <h4 style= "margin-left: 0px; color: rgb(94, 94, 94); font-size: xx-large">Profile Settings</h4>
-                </div>
-                <div class="row mt-3">
-                    <span style=" color: rgb(44, 44, 44); font-weight: 500;">
-                        Email:
-                    </span>
-                    <span>{{trainer.email}}</span>
-                </div>
-                <div class="row mt-3" style="margin-right: 20px;">
-                    <span style=" color: rgb(44, 44, 44); font-weight: 500;">
-                        Full Name:
-                    </span>
-                    <span>{{trainer.name}}</span>
-                </div>
-                <div class="row mt-3" style="margin-right: 60px;">
-                    <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
-                        Age:
-                    </span>
-                    <span>{{calculateAge trainer.dob}}</span>
-                </div>
-                <div class="row mt-3">
-                    <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
-                        Date of birth:
-                    </span>
-                    <span>{{trainer.dob}}</span>
-                </div>
-                <div class="row mt-3">
-                    <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
-                        Address:
-                    </span>
-                    <span>{{trainer.address}}</span>
-                </div>
-                <div class="row mt-3">
-                    <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
-                        Specialty:
-                    </span>
-                    <span>{{trainer.specialty}}</span>
-                </div>
-                <div class="mt-2 text-center" >
-                            <button type="button" class="btn btn-success js-edit-info btn btn-primary profile-button">
-                                <a class ="underline-white" href="/{{removeSpace user.name}}/edit_profile?id={{trainer._id}}">
-                                    Edit Profile
-                                </a>
-                            </button>
+                <div class="row" style="margin-top: -25px;">
+                    <div class="col-md-3" style="margin-left: 150px; margin-top: 25px">
+                        <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                            <img style="width: 170px; height: 170px;"
+                                src="data:image/{{trainer.image.contentType}};base64,{{ trainer.image.data}}" alt=""
+                                class="img-thumbnail">
+                            <span>{{removeSpace trainer.name}}</span><span
+                                class="text-black-50">{{trainer.email}}</span>
                         </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="p-3 py-5">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h4 style="margin-left: 0px; color: rgb(94, 94, 94); font-size: xx-large">Profile
+                                    Settings</h4>
+                            </div>
+                            <div class="row mt-3">
+                                <span style=" color: rgb(44, 44, 44); font-weight: 500;">
+                                    Email:
+                                </span>
+                                <span>{{trainer.email}}</span>
+                            </div>
+                            <div class="row mt-3" style="margin-right: 20px;">
+                                <span style=" color: rgb(44, 44, 44); font-weight: 500;">
+                                    Full Name:
+                                </span>
+                                <span>{{trainer.name}}</span>
+                            </div>
+                            <div class="row mt-3" style="margin-right: 60px;">
+                                <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
+                                    Age:
+                                </span>
+                                <span>{{calculateAge trainer.dob}}</span>
+                            </div>
+                            <div class="row mt-3">
+                                <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
+                                    Date of birth:
+                                </span>
+                                <span>{{trainer.dob}}</span>
+                            </div>
+                            <div class="row mt-3">
+                                <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
+                                    Address:
+                                </span>
+                                <span>{{trainer.address}}</span>
+                            </div>
+                            <div class="row mt-3">
+                                <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
+                                    Specialty:
+                                </span>
+                                <span>{{trainer.specialty}}</span>
+                            </div>
+                            <div class="mt-2 text-center">
+                                <button type="button"
+                                    class="btn btn-success js-edit-info btn btn-primary profile-button">
+                                    <a class="underline-white"
+                                        href="/{{removeSpace trainer.name}}/edit_profile?id={{trainer._id}}">
+                                        Edit Profile
+                                    </a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-</div>
-</div>
-</main>
-{{> bottom}}
+        </div>
+    </main>
+    {{> bottom}}
 </body>
+
 </html>
