--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -341,8 +341,14 @@
     min-height: 100vh;
     margin-top: 70px;
 }
+
+
 /* #content-detail { */
-    /* min-width: 1349px; */
+
+
+/* min-width: 1349px; */
+
+
 /* } */
 
 
@@ -591,7 +597,7 @@
 }
 
 
-/* action-button delete */
+/* action-button edit, change password profile */
 
 .underline-white {
     text-decoration: none;
@@ -599,6 +605,18 @@
 }
 
 .underline-white:hover {
+    color: unset;
+}
+
+
+/* action-button delete */
+
+.underline-white1 {
+    text-decoration: none;
+    color: white;
+}
+
+.underline-white1:hover {
     color: unset;
 }
 
@@ -652,7 +670,9 @@
     display: block;
 }
 
+
 /* Flash Msg */
+
 .flashMsg-close {
     display: none;
 }
