--- a/src/views/Trainee/index.hbs
+++ b/src/views/Trainee/index.hbs
@@ -7,7 +7,7 @@
     <main id="common_content-area" class="common_content-area">
         <div class="image-slider">
             <div class="slides">
-                <input type="radio" name="radio-btn" id="radio1" checked>
+                <input type="radio" name="radio-btn" id="radio1" checkedd>
                 <input type="radio" name="radio-btn" id="radio2">
                 <input type="radio" name="radio-btn" id="radio3">
                 <input type="radio" name="radio-btn" id="radio4">
