--- a/src/views/trainer/assignedCourses.hbs
+++ b/src/views/trainer/assignedCourses.hbs
@@ -3,7 +3,7 @@
 {{> head}}
 <body>
     {{> trainerLayout}}
-    <main class="content-detail" id="">
+    <main class="content-detail trainer-body" id="">
         
         <div class="content-detail-header mt-4">
             <form action="/admin/admin-accounts/search" class="content-detail-header-search" method="GET">
