--- a/src/views/staff/categories.hbs
+++ b/src/views/staff/categories.hbs
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> head}}
+
 <body>
     {{> staffLayout}}
     <main class="content-detail" id="">
         <h3 class="fs-4 mt-5">Categories (~ {{total}} records)</h3>
         <div class="content-detail-header mt-4">
-            <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Category</button>
+            <button type="button" class="btn btn-outline-primary fs-5 js-add-info" style="font-weight: 500;">New
+                Category</button>
             <form action="/staff/categories/search" class="content-detail-header-search" method="GET">
-                <input type="search" name="q" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
-                <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
+                <input type="search" name="q" class="form-control" placeholder="Search by name...">
+                <button style="width: 90px;" class="btn btn-outline-primary" type="submit"><i
+                        class="bi bi-search"></i></button>
             </form>
         </div>
-
+        {{#if flashMsgs.success}}
+        <div class="container text-center alert alert-success col-8 fs-5 mt-5" id="flashMsg">
+            <span>{{flashMsgs.success}}</span>
+            <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
+        </div>
+        {{/if}}
+        {{#if flashMsgs.error}}
+        <div class="container text-center alert alert-danger col-8 fs-5 mt-5" id="flashMsg">
+            <span>{{flashMsgs.error}}</span>
+            <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
+        </div>
+        {{/if}}
+        {{#if categories}}
+        <h2 class="text-center mt-4 text-primary">List of Categories</h2>
         <table class="table table-hover table-bordered caption-top mt-5">
             <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
@@ -34,19 +50,20 @@
                         <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example">
                             <button type="button" class="btn btn-success js-edit-info">
                                 <i class="bi bi-pencil-square"></i>
-                                <a class ="underline-white" href="/staff/categories/edit?id={{this._id}}">
+                                <a class="underline-white1" href="/staff/categories/edit?id={{this._id}}">
                                     <span class=" fs-6" style="margin-left: auto;">Edit</span>
                                 </a>
                             </button>
                             <button type="button" class="btn btn-danger">
                                 <i class="bi bi-x-lg"></i>
-                                <a class ="underline-white" href="/staff/categories/delete/?id={{this._id}}", onclick="return conFirm_Delete()">
+                                <a class="underline-white1" href="/staff/categories/delete/?id={{this._id}}" ,
+                                    onclick="return conFirm_Delete()">
                                     <span class=" fs-6" style="margin-left: auto;">Delete</span>
                                     <script>
-                                        function conFirm_Delete(){
-                                        var result = confirm("Are you sure you want to delete this category?")
-                                        if(result==true)  return true;
-                                        else return false
+                                        function conFirm_Delete() {
+                                            var result = confirm("Are you sure you want to delete this category?")
+                                            if (result == true) return true;
+                                            else return false
                                         }
                                     </script>
                                 </a>
@@ -57,6 +74,11 @@
                 {{/each}}
             </tbody>
         </table>
+        {{else}}
+        <div class="text-center fs-3" style="margin-top: 140px; color: #198754;">
+            <span>No results found for query "{{q}}"</span>
+        </div>
+        {{/if}}
     </main>
 
     <div class="modal-action_form js-modal-adding_form">
@@ -68,20 +90,27 @@
             </header>
 
             {{!-- block of code for add new category --}}
-            <form class="modal-action_form-body" method="POST" action="/staff/categories/store">
+            <form class="modal-action_form-body" method="POST" action="/staff/categories/store" onsubmit="return validateCategory();">
                 <div>
-                    <label for="categoryName">Category Name</label>
-                    <input type="text" class="form-control" id="categoryName" name="name"  placeholder="Name of Category..." required>
+                    <label for="name">Category Name</label>
+                    <input type="text" class="form-control" id="name" name="name"
+                        placeholder="Name of Category..." minlength="5" maxlength="30" required>
+                        <span class="msg" id="name-msg"></span>
                 </div>
                 <div>
-                    <label for="categoryDescription">Category Description</label>
-                    <textarea class="form-control" id="categoryDescription" name="description" placeholder="Description..." required></textarea>
+                    <label for="description">Category Description</label>
+                    <textarea class="form-control" id="description" name="description"
+                        placeholder="Description..." minlength="10" maxlength="50" required></textarea>
+                        <span class="msg" id="description-msg"></span>
                 </div>
                 <div>
-                    <label for="TotalCourse">Total Course</label>
-                    <input type="number" class="form-control" id="totalCourse" name="total"  placeholder="Total of Course..." required>
+                    <label for="total">Total Course</label>
+                    <input type="number" class="form-control" id="total" name="total"
+                        placeholder="Total of Course..." min= "15", max= "40" required>
+                    
                 </div>
-                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
+                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;"
+                        class="bi bi-check2"></i></button>
             </form>
             <footer class="modal-action_form-footer">
                 <a href="#" class="cancel" style="color: white">Cancel</a>
@@ -89,6 +118,6 @@
             </footer>
         </div>
     </div>
-{{> footerStaff}}
+    {{> footerStaff}}
 </body>
 </html>
