--- a/src/public/css/trainer/viewTrainee.css
+++ b/src/public/css/trainer/viewTrainee.css
@@ -167,9 +167,14 @@ p {
 
 /* action-block-trainer */
 
-.action-block-trainer {
-    /* min-height: 100%;
+
+/* .action-block-trainer { */
+
+
+/* min-height: 100%;
     display: grid;
     grid-template-rows: 1fr 1fr;
     gap: 40px 0; */
-}
+
+
+/* } */
