--- a/src/views/trainer/assignedCourses.hbs
+++ b/src/views/trainer/assignedCourses.hbs
@@ -13,7 +13,7 @@
             </form>
         </div>
         <h1 class="class-title">
-            List Class
+            List Of Course Trainer
         </h1>
         <table class="table table-hover table-bordered caption-top mt-5" style="width: 100%;">
             {{!-- <caption class="fs-5"></caption> --}}
