update view accounrs

--- a/src/public/css/trainer/main.css
+++ b/src/public/css/trainer/main.css
@@ -7,10 +7,10 @@
     font-family: 'Rubik', sans-serif;
 }
 
-p {
+.trainer-p {
     margin: 0;
 }
 
-th {
+.trainer-th {
     vertical-align: middle;
 }
