--- a/src/public/css/trainer/viewTrainee.css
+++ b/src/public/css/trainer/viewTrainee.css
@@ -2,57 +2,57 @@
     margin-top: 40px;
 }
 
-.status-pending {
+.trainer-status-pending {
     background-color: #9e9e9e;
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-.status-pass {
+.trainer-status-pass {
     background-color: #2eeb08;
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-.status-merit {
+.trainer-status-merit {
     background-color: #08ebc1;
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-.status-distinction {
+.trainer-status-distinction {
     background-color: #fa8e01;
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-.status-fail {
+.trainer-status-fail {
     background-color: rgb(250, 6, 6);
     color: #000;
     padding: 5px 20px;
     border-radius: 12px;
 }
 
-p {
+.trainer-p {
     text-align: center;
 }
 
-.button-edit {
+.trainer-button-edit {
     background-color: aliceblue;
     border-radius: 12px;
     color: black;
     border: none;
 }
 
-.button-edit:hover {
+.trainer-button-edit:hover {
     background-color: rgb(148, 86, 4);
 }
 
-.button-delete {
+.trainer-button-delete {
     background-color: rgb(215, 217, 219);
     border-radius: 12px;
     color: black;
@@ -60,7 +60,7 @@ p {
     outline: none;
 }
 
-.modal-title {
+.trainer-modal-title {
     text-transform: uppercase;
     letter-spacing: 1rem;
     text-align: center;
@@ -100,67 +100,67 @@ p {
     letter-spacing: 0.3rem;
 }
 
-.form-update {
+.trainer-form-update {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
 }
 
-.form-edit-grade label {
+.trainer-form-edit-grade label {
     margin-bottom: 10px;
 }
 
-.grade-status {
+.trainer-grade-status {
     margin-top: 10px;
 }
 
-.course {
+.trainer-course {
     display: grid;
     grid-template-columns: 100px auto;
     gap: 0 40px;
 }
 
-.course .course-name {
+.trainer-course .trainer-course-name {
     text-align: center;
     gap: 0 40px;
 }
 
-.status {
-    display: grid;
-    grid-template-columns: 100px auto;
-    margin-top: 30px;
-    gap: 0 40px;
-}
-
-.status .status-desc {
-    text-align: center;
-}
-
-.grade {
+.trainer-status {
     display: grid;
     grid-template-columns: 100px auto;
     margin-top: 30px;
     gap: 0 40px;
 }
 
-.grade-input {
+.trainer-status .trainer-status-desc {
     text-align: center;
 }
 
-.btn-disable {
+.trainer-grade {
+    display: grid;
+    grid-template-columns: 100px auto;
+    margin-top: 30px;
+    gap: 0 40px;
+}
+
+.trainer-grade-input {
+    text-align: center;
+}
+
+.trainer-btn-disable {
     cursor: not-allowed;
     background-color: gray;
     pointer-events: none;
 }
 
-.btn-search {
+.trainer-btn-search {
     width: 90px;
     margin-left: 30px;
     background-color: #5AE8CE;
     border: none
 }
 
-.btn-search:hover {
+.trainer-btn-search:hover {
     background-color: #53bfab;
 }
 
