--- a/src/views/trainee/designatedcourse.hbs
+++ b/src/views/trainee/designatedcourse.hbs
@@ -5,7 +5,7 @@
     {{> traineeLayout}}
 
     <main class="content-detail" id="">
-        <h3 class="fs-4 mt-5">Courses (~ 20 records)</h3>
+        {{!-- <h3 class="fs-4 mt-5">Courses (~ 20 records)</h3> --}}
         <div class="content-detail-header mt-4">
         <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Course</button>
            <form action="/trainee/designatedcourse/search" class="content-detail-header-search" method="GET">
@@ -13,7 +13,7 @@
                 <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
             </form>
         </div>
-    
+        <h2 class="text-center text-primary text-capitalize">Curriculum</h2>
         <table class="table table-hover table-bordered caption-top mt-5">
             <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
@@ -22,6 +22,7 @@
                     {{!-- <th scope="col">Course Category</th> --}}
                     <th scope="col">Name</th>
                     <th scope="col">Trainer</th>
+                    <th scope="col">Class</th>
                     <th scope="col">createAt</th>
                     <th scope="col">updateAt</th>
                     <th scope="col">Total</th>
@@ -36,17 +37,15 @@
                     {{!-- <td>{{this.coursecategory}}</td> --}}
                     <td>{{this.name}}</td>
                     <td>{{this.trainer}}</td>
+                    <td>{{this.class}}</td>
                     <td>{{this.createAt}}</td>
                     <td>{{this.updateAt}}</td>
                     <td>{{this.total}}</td>
                     <td>
-                        <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example">
-                            <a href="/seeall/edit?id={{this._id}}" class="btn btn-success js-edit-info" style="border-bottom-right-radius: unset; border-top-right-radius: unset;">
-                                <i class="bi bi-pencil-square"></i><span class=" fs-6" style="margin-left: 5px;">Edit</span>
-                            </a>
-                            <a href="/seeall/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
+                        <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example">                        
+                            <a href="/trainee/designatedcourse/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
                                 <i class="bi bi-x-lg"></i><span class=" fs-6" style="margin-left: 5px;">Delete</span>
-                            </a>
+                            </a> 
                             <a href="/trainee/view-alltrainee/?id={{this._id}}" class="btn btn-warning" style="border-radius: unset;">
                                 <i class="bi bi-binoculars"></i><span class=" fs-6" style="margin-left: 5px;">View</span>
                             </a>
@@ -72,10 +71,6 @@
                     <label for="codeCourse">Code</label>
                     <input type="text" class="form-control" id="codeCourse" name="code" placeholder="Code of Course..." required>
                 </div>
-                {{!-- <div class="form-group">
-                    <label for="courseCategory">Course Category</label>
-                    <input type="text" class="form-control" id="courseCategory" name="coursecategory" placeholder="Course Category..." required>
-                </div> --}}
                 <div class="form-group">
                     <label for="categoryName">Name</label>
                     <input type="text" class="form-control" id="categoryName" name="name" placeholder="Course Name..." required>
@@ -83,6 +78,10 @@
                 <div class="form-group">
                     <label for="courseTrainer">Trainer</label>
                     <input class="form-control" id="courseTrainer" name="trainer" placeholder="Course Trainer..." required>
+                </div>
+                <div class="form-group">
+                    <label for="class">Class</label>
+                    <input type ="text" class="form-control" id="class" name="class" placeholder="Class..." required>
                 </div>
                 <div class="form-group">
                     <label for="create">CreateAt</label>
