--- a/src/views/trainee/curriculum.hbs
+++ b/src/views/trainee/curriculum.hbs
@@ -7,7 +7,7 @@
     <main class="content-detail" id="">
         <h2 class="text-center text-primary text-capitalize">List all course</h2>
         <div class="content-detail-header mt-4">
-        {{!-- <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Course</button> --}}
+        <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Course</button>
            <form action="/trainee/curriculum/search" class="content-detail-header-search" method="GET">
                 <input type="search" name="q" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
