update course, category

--- a/src/views/staff/categories.hbs
+++ b/src/views/staff/categories.hbs
@@ -35,8 +35,8 @@
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
                     <th scope="col">Description</th>
-                    <th scope="col">Total Course</th>
-                    <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span></th>
+                    <th scope="col">Total Courses</th>
+                    <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Actions</span></th>
                 </tr>
             </thead>
             <tbody>
