--- a/src/views/staff/editCategory.hbs
+++ b/src/views/staff/editCategory.hbs
@@ -42,7 +42,7 @@
                             <span class="msg" id="name-msg"></span>
                     </div>
                     <div class="mt-4">
-                        <label for="total">Total Course</label>
+                        <label for="total">Total Courses</label>
                         <input type="number" class="form-control" value="{{category.total}}" id="total"
                             name="total" placeholder="Total of Course..." min= "15", max= "40"required>
                     </div>
