--- a/src/views/staff/courses.hbs
+++ b/src/views/staff/courses.hbs
@@ -38,9 +38,9 @@
                     <th scope="col">Category Name</th>
                     <th scope="col">Description</th>
                     <th scope="col">Session</th>
-                    <th scope="col">createAt</th>
-                    <th scope="col">updateAt</th>
-                    <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span></th>
+                    <th scope="col">createdAt</th>
+                    <th scope="col">updatedAt</th>
+                    <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Actions</span></th>
                 </tr>
             </thead>
             <tbody>
@@ -108,7 +108,7 @@
                 <div class="form-group">
                     <label for="name">Course Name</label>
                     <input type="text" class="form-control" id="name" name="name" placeholder="Course Name..."
-                        minlength="5" maxlength="30" required>
+                        minlength="5" maxlength="100" required>
                         <span class="msg" id="name-msg"></span>
                 </div>
                 <div class="col-md-4">
