--- a/src/views/staff/categories.hbs
+++ b/src/views/staff/categories.hbs
@@ -104,7 +104,7 @@
                         <span class="msg" id="description-msg"></span>
                 </div>
                 <div>
-                    <label for="total">Total Course</label>
+                    <label for="total">Total Courses</label>
                     <input type="number" class="form-control" id="total" name="total"
                         placeholder="Total of Course..." min= "15", max= "40" required>
                     
