--- a/src/views/staff/courses.hbs
+++ b/src/views/staff/courses.hbs
@@ -126,12 +126,12 @@
                         <span class="msg" id="description-msg"></span>
                 </div>
                 <div class="form-group">
-                    <label for="create">CreateAt</label>
+                    <label for="create">CreatedAt</label>
                     <input type="date" class="form-control" id="create" name="createAt" placeholder="Update At..."
                         required>
                 </div>
                 <div class="form-group">
-                    <label for="update">UpdateAt</label>
+                    <label for="update">UpdatedAt</label>
                     <input type="date" class="form-control" id="update" name="updateAt" placeholder="Update At..."
                         required>
                 </div>
