--- a/src/views/staff/editCourse.hbs
+++ b/src/views/staff/editCourse.hbs
@@ -76,12 +76,12 @@
                             placeholder="Session of Course..." required>
                     </div>
                     <div class="mt-4">
-                        <label for="create">CreateAt</label>
+                        <label for="create">CreatedAt</label>
                         <input type="date" value="{{convertDate course.createAt}}" class="form-control" id="create"
                             name="createAt" placeholder=" CreateAt..." required>
                     </div>
                     <div class="sameLine2">
-                        <label for="update">UpdateAt</label>
+                        <label for="update">UpdatedAt</label>
                         <input type="date" value="{{convertDate course.updateAt}}" class="form-control" id="update"
                             name="updateAt" placeholder="Update At..." required>
                     </div>
