--- a/src/views/trainer/viewTrainees.hbs
+++ b/src/views/trainer/viewTrainees.hbs
@@ -9,7 +9,7 @@
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
         <div class="content-detail-header mt-4">
-            <form action="/trainer/assignedCourse/viewclass?id={{courseId}}" method="POST" id="search"
+            <form action="https://fptedu.herokuapp.com/trainer/assignedCourse/viewclass?id={{courseId}}" method="POST" id="search"
                 class="content-detail-header-search">
                 <input type="search" name="keyword" class="form-control" placeholder="Search by name..." id="keyword">
                 <button class="btn btn-primary btn-search" value="submit"><i class="bi bi-search"></i></button>
@@ -45,7 +45,7 @@
                         </thead>
                         <tbody>
                             {{#each data}}
-                            <tr id={{@index}}>
+                            <tr class="tr-trainer" id={{@index}}>
                                 <th scope="row">
                                     <p>{{@index}}</p>
                                 </th>
@@ -107,7 +107,7 @@
                         </div>
                         <span class="cross-line"></span>
                         <div class="form-edit-grade">
-                            <form action="/trainer/updateGrade" method="POST" id="update_grade" class="form-update">
+                            <form action="https://fptedu.herokuapp.com/trainer/updateGrade" method="POST" id="update_grade" class="form-update">
                                 <input type="text" name="traineeCode" id="trainee-code-popup" style="display: none;">
                                 <div class="course">
                                     <h6 for="course-label">Class:</h6>
@@ -167,7 +167,7 @@
             var gradeStatus = $('#grade_status_' + index).html();
             var className = $('#class_name').html();
             var traineName = $('#traine_name_' + index).html();
-            $.get("http://localhost:5000/trainer/viewTraineeStatus",
+            $.get("http://fptedu.herokuapp.com/trainer/viewTraineeStatus",
                 {
                     traineeCode: traineeCode,
                     courseId: courseId,
