--- a/src/views/trainer/assignedCourses.hbs
+++ b/src/views/trainer/assignedCourses.hbs
@@ -6,7 +6,7 @@
     <main class="content-detail trainer-body" id="">
         
         <div class="content-detail-header mt-4">
-             <form action="/trainer/assignedCourse" method="POST" id="search"
+             <form action="https://fptedu.herokuapp.com/trainer/assignedCourse" method="POST" id="search"
                 class="content-detail-header-search">
                 <input type="search" name="keyword" class="form-control" placeholder="Search by name..." id="keyword">
                 <button class="btn btn-primary btn-search" value="submit"><i class="bi bi-search"></i></button>
