--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -27,12 +27,18 @@
             </div>
         {{/if}}
         {{#if admins}}
-            <h2 class="text-center mt-4 text-primary">List of Admin Accounts</h2>
+            <h2 class="text-center mt-4">
+                <a href="/admin/admin-accounts" class="text-decoration-none text-primary">List of Admin Accounts</a>
+            </h2>
             <table class="table table-bordered caption-top mt-4" style="width: 100%;">
                 {{!-- <caption class="fs-5"></caption> --}}
                 <thead class="">
                     <tr style="font-size: 18px; text-align: center;">
-                        <th scope="col">#</th>
+                        <th scope="col">
+                            #
+                            <a href="/admin/admin-accounts/descending" class="arrow-link"><i class="bi bi-arrow-down"></i></a>
+                            <a href="/admin/admin-accounts/ascending" class="arrow-link"><i class="bi bi-arrow-up"></i></a>
+                        </th>
                         <th scope="col" style="min-width: 190px;">Avatar</th>
                         <th scope="col">Email</th>
                         <th scope="col">Full Name</th>
@@ -74,7 +80,7 @@
             </table>
         {{else}}
             <div class="text-center fs-3" style="margin-top: 140px; color: #198754;">
-                <span>No results found for query "{{q}}"</span>
+                <span>No results found for query "{{q}}".</span>
             </div>
         {{/if}}
     </main>
@@ -90,7 +96,7 @@
             <form class="modal-action_form-body" method="POST" action="/admin/admin-accounts/store" enctype="multipart/form-data" onsubmit="return validateAdminAcc();">
                 <div>
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email address..." minlength="12" maxlength="40" required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email address..." minlength="12" maxlength="40" autofocus required>
                     <span class="msg" id="email-msg">{{msg}}</span>
                 </div>
                 <div>
@@ -158,7 +164,6 @@
                 </div>
                 <button type="submit" class="btn-action">Update<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
             </form>
-
             <footer class="modal-action_form-footer">
                 <p style="margin-bottom: 6px;">Need <a href="#">help?</a></p>
             </footer>
@@ -169,7 +174,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete</h5>
+                    <span class="modal-title" id="exampleModalLabel">Delete</span>
                     <i class="bi bi-exclamation-triangle fs-3" style="color: red; margin-left: 10px;"></i>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
